Fix color scheme messing up colors on mobile devices set to dark mode with no dedicated dark theme

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,9 @@
 }
 
 /* dark mode user-agent-styles */
-html {
+/* html {
   color-scheme: dark light;
-}
+} */
 
 /* min body height */
 body {
